--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "jest --verbose",
     "test:watch": "jest --watchAll --verbose",
     "test:coverage": "jest --verbose --coverage",
-    "build": "rimraf ./build && babel-node ./node_modules/webpack/bin/webpack --history-api-fallback && node server",
-    "start": "babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server --port 8008 --open --history-api-fallback && nodemon server"
+    "dev": "webpack --open --config webpack.dev.js",
+    "build": "rimraf ./build && webpack --config webpack.prod.js",
+    "start": "babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server --mode development --port 8008 --open --history-api-fallback && nodemon server"
   },
   "repository": {
     "type": "git",
@@ -76,7 +77,9 @@
     "file-loader": "2.0.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "^24.3.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "4.9.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "0.12.7",
     "react-testing-library": "^6.0.0",
     "redux-devtools-extension": "^2.13.8",
@@ -86,6 +89,7 @@
     "style-loader": "0.23.0",
     "webpack": "4.20.2",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.2.1",
+    "webpack-merge": "^4.2.1"
   }
 }
