--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "dev": "webpack --open --config webpack.dev.js",
     "build": "rimraf ./build && webpack --config webpack.prod.js",
     "start": "babel-node ./node_modules/webpack-dev-server/bin/webpack-dev-server --mode development --port 8008 --open --history-api-fallback",
-    "startapp": "concurrently \"npm start\" \"nodemon server\"",
-    "startprod":"concurrently \" npm run-script build\" \"node server\""
+    "startapp": "concurrently \"npm start\" \"nodemon server\""
   },
   "repository": {
     "type": "git",
@@ -48,6 +47,9 @@
       "node"
     ]
   },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
@@ -56,6 +58,7 @@
     "history": "^4.7.2",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.7",
+    "prop-types": "^15.7.2",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
@@ -63,6 +66,7 @@
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.8",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.3"
   },
@@ -72,11 +76,18 @@
     "@babel/plugin-proposal-class-properties": "7.0.0",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-react": "7.0.0",
+    "babel-eslint": "^10.0.1",
     "babel-loader": "8.0.4",
     "css-loader": "1.0.0",
     "enzyme": "^3.9.0",
     "enzyme-adapter-react-16": "^1.10.0",
     "enzyme-to-json": "^3.3.5",
+    "eslint": "^5.15.3",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-loader": "^2.1.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4",
     "file-loader": "2.0.0",
     "html-webpack-plugin": "3.2.0",
     "jest": "^24.3.1",
@@ -85,7 +96,6 @@
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "path": "0.12.7",
     "react-testing-library": "^6.0.0",
-    "redux-devtools-extension": "^2.13.8",
     "redux-mock-store": "^1.5.3",
     "redux-router": "^2.1.2",
     "sass-loader": "7.1.0",
