adding eslint autofix onSave

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,11 @@
     "editor.tabSize": 2,
     "editor.rulers": [100],
     "editor.formatOnSave": false,
-    // "eslint.autoFixOnSave": true,
+    "files.autoSave": "off",
+    "eslint.trace.server": "messages",
+    "eslint.autoFixOnSave": true,
     "editor.showFoldingControls": "always",
     "editor.folding": true,
     "editor.foldingStrategy": "indentation", 
   }
+  // eslint plugin for vscode required
